[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "omnimodal"
version = "0.0.1"
description = "NextGPT - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/NExT-GPT"
documentation = ""  # Add this if you have documentation.
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/kyegomez/NExT-GPT"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6"
]
packages = [
    { include = "next" },
    { include = "next/**/*.py" },
]


[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
einops = "*"
pegasusx = "*"
torchvision = "*"
pytorchvideo = "*"
torchaudio = "*"
diffusers = "*"



[tool.poetry.dev-dependencies]
# Add development dependencies here
